--- a/graph.html
+++ b/graph.html
@@ -137,31 +137,76 @@
     graph = `digraph  {
 0 [class="start active", fillcolor=green, fontsize=12, label=START, style=filled];
 "-1" [class=end, fillcolor=red, fontsize=12, label=END, style=filled];
-1 [class="", fontsize=12, label=utter_greet];
-2 [class="", fontsize=12, label=utter_game_intro];
-3 [class="", fontsize=12, label=action_look];
-4 [class="", fontsize=12, label="..."];
-5 [class="", fontsize=12, label=utter_goodbye];
-7 [class="", fontsize=12, label=utter_iamabot];
-8 [class=intent, fillcolor=lightblue, label="good afternoon", shape=rect, style=filled];
-9 [class=intent, fillcolor=lightblue, label="of course", shape=rect, style=filled];
-10 [class=intent, fillcolor=lightblue, label="look around the forest", shape=rect, style=filled];
-11 [class=intent, fillcolor=lightblue, label=goodbye, shape=rect, style=filled];
-12 [class=intent, fillcolor=lightblue, label="am I talking to a human?", shape=rect, style=filled];
-0 -> 4  [class="", key=NONE, label=""];
-0 -> 8  [class="", key=0];
-1 -> 9  [class="", key=0];
-2 -> 10  [class="", key=0];
-3 -> "-1"  [class="", key=NONE, label=""];
-4 -> 11  [class="", key=0];
-4 -> 12  [class="", key=0];
-5 -> "-1"  [class="", key=NONE, label=""];
-7 -> "-1"  [class="", key=NONE, label=""];
-8 -> 1  [class="", key=0];
-9 -> 2  [class="", key=0];
-10 -> 3  [class="", key=0];
-11 -> 5  [class="", key=0];
-12 -> 7  [class="", key=0];
+1 [class="", fontsize=12, label=action_look];
+2 [class="", fontsize=12, label=action_check_answer];
+3 [class="", fontsize=12, label=action_pickup];
+4 [class="", fontsize=12, label=action_use];
+5 [class="", fontsize=12, label=utter_greet];
+6 [class="", fontsize=12, label=utter_goodbye];
+8 [class="", fontsize=12, label=utter_game_intro];
+9 [class="", fontsize=12, label=utter_level_1];
+33 [class="", fontsize=12, label="..."];
+36 [class="", fontsize=12, label=utter_iamabot];
+38 [class="", fontsize=12, label=utter_help];
+42 [class="", fontsize=12, label=utter_help];
+43 [class="", fontsize=12, label=utter_hint];
+45 [class="", fontsize=12, label=action_inventory];
+46 [class=intent, fillcolor=lightblue, label="Can I look at the forest?", shape=rect, style=filled];
+47 [class=intent, fillcolor=lightblue, label=hey, shape=rect, style=filled];
+48 [class=intent, fillcolor=lightblue, label=Desert, shape=rect, style=filled];
+49 [class=intent, fillcolor=lightblue, label="pick up the torch", shape=rect, style=filled];
+50 [class=intent, fillcolor=lightblue, label="open the key", shape=rect, style=filled];
+51 [class=intent, fillcolor=lightblue, label="look at mountain", shape=rect, style=filled];
+52 [class=intent, fillcolor=lightblue, label=n, shape=rect, style=filled];
+53 [class=intent, fillcolor=lightblue, label=indeed, shape=rect, style=filled];
+54 [class=intent, fillcolor=lightblue, label=yess, shape=rect, style=filled];
+55 [class=intent, fillcolor=lightblue, label="glance at the sand", shape=rect, style=filled];
+56 [class=intent, fillcolor=lightblue, label="good night", shape=rect, style=filled];
+57 [class=intent, fillcolor=lightblue, label="am I talking to a human?", shape=rect, style=filled];
+58 [class=intent, fillcolor=lightblue, label="how does this game work", shape=rect, style=filled];
+59 [class=intent, fillcolor=lightblue, label=okki, shape=rect, style=filled];
+60 [class=intent, fillcolor=lightblue, label="check inventory", shape=rect, style=filled];
+61 [class=intent, fillcolor=lightblue, label="I found the cardboard box, can I open it?", shape=rect, style=filled];
+0 -> 33  [class="", key=NONE, label=""];
+0 -> 46  [class="", key=0];
+0 -> 47  [class="", key=0];
+1 -> 48  [class="", key=0];
+2 -> 49  [class="", key=0];
+3 -> 50  [class="", key=0];
+4 -> "-1"  [class="", key=NONE, label=""];
+4 -> 51  [class="", key=0];
+5 -> 52  [class="", key=0];
+5 -> 53  [class="", key=0];
+6 -> "-1"  [class="", key=NONE, label=""];
+8 -> 54  [class="", key=0];
+9 -> 55  [class="", key=0];
+33 -> 42  [class="", key=NONE, label=""];
+33 -> 56  [class="", key=0];
+33 -> 57  [class="", key=0];
+33 -> 58  [class="", key=0];
+33 -> 59  [class="", key=0];
+33 -> 60  [class="", key=0];
+36 -> "-1"  [class="", key=NONE, label=""];
+38 -> "-1"  [class="", key=NONE, label=""];
+42 -> 61  [class="", key=0];
+43 -> "-1"  [class="", key=NONE, label=""];
+45 -> "-1"  [class="", key=NONE, label=""];
+46 -> 1  [class="", key=0];
+47 -> 5  [class="", key=0];
+48 -> 2  [class="", key=0];
+49 -> 3  [class="", key=0];
+50 -> 4  [class="", key=0];
+51 -> 1  [class="", key=0];
+52 -> 6  [class="", key=0];
+53 -> 8  [class="", key=0];
+54 -> 9  [class="", key=0];
+55 -> 1  [class="", key=0];
+56 -> 6  [class="", key=0];
+57 -> 36  [class="", key=0];
+58 -> 38  [class="", key=0];
+59 -> 38  [class="", key=0];
+60 -> 45  [class="", key=0];
+61 -> 43  [class="", key=0];
 }
 `;
     drawGraph(graph);
